# MOKACLIFFORD

./: CMakeLists.txt  README.md
src/lib-controler/: CMakeLists.txt  controler-input-events.cc  controler-input-events.hh  controler-operations.cc  controler-operations.hh  controler-parameter.cc  controler-parameter.hh  controler-protected-methods.cc  controler-protected-methods.hh  controler-scene-transformation.cc  controler-scene-transformation.hh  controler-selection.cc  controler-selection.hh  controler-types.hh  controler-undo-redo.cc  controler-undo-redo.hh  controler-views.cc  controler-views.hh  controler.cc  controler.hh  operations-eye-positioning.cc  operations-eye-positioning.hh  operations.cc  operations.hh
src/lib-controler-gmap/: CMakeLists.txt  controler-gmap-creations.cc  controler-gmap-creations.hh  controler-gmap-export-xfig.cc  controler-gmap-export-xfig.hh  controler-gmap-input-events.cc  controler-gmap-input-events.hh  controler-gmap-object-transformation.cc  controler-gmap-object-transformation.hh  controler-gmap-operations.cc  controler-gmap-operations.hh  controler-gmap-parameter.cc  controler-gmap-parameter.hh  controler-gmap-protected-methods.cc  controler-gmap-protected-methods.hh  controler-gmap-rounding.cc  controler-gmap-rounding.hh  controler-gmap-selection.cc  controler-gmap-selection.hh  controler-gmap-types.hh  controler-gmap-undo-redo.cc  controler-gmap-undo-redo.hh  controler-gmap-views.cc  controler-gmap-views.hh  controler-gmap.cc  controler-gmap.hh
src/lib-controler-gmap/operations/: operations-corefinement.cc  operations-corefinement.hh  operations-creation.cc  operations-creation.hh  operations-dual.cc  operations-dual.hh  operations-duplication-deletion.cc  operations-duplication-deletion.hh  operations-extrusion.cc  operations-extrusion.hh  operations-geology.cc  operations-geology.hh  operations-materialization.cc  operations-materialization.hh  operations-merging-insertion-contraction.cc  operations-merging-insertion-contraction.hh  operations-mesh.cc  operations-mesh.hh  operations-move-selection.cc  operations-move-selection.hh  operations-plating.cc  operations-plating.hh  operations-positioning.cc  operations-positioning.hh  operations-rounding.cc  operations-rounding.hh  operations-save-load-export.cc  operations-save-load-export.hh  operations-selection.cc  operations-selection.hh  operations-sew-unsew.cc  operations-sew-unsew.hh  operations-topology.cc  operations-topology.hh  operations-triangulation-quadrangulation.cc  operations-triangulation-quadrangulation.hh  operations-triangulation.cc  operations-triangulation.hh
src/lib-controler-gmap/parameter/: parameters-gmap-default-values.hh
src/lib-controler-gmap/precompile/: precompile-dart.cc  precompile-dart.hh  precompile-face.cc  precompile-face.hh  precompile-normal-vector.cc  precompile-normal-vector.hh  precompile-object-transformation.cc  precompile-object-transformation.hh  precompile-preview.cc  precompile-preview.hh  precompile-sew.cc  precompile-sew.hh  precompile-spamod.cc  precompile-spamod.hh  precompile-vertex.cc  precompile-vertex.hh
src/lib-controler/parameter/: parameter.cc  parameter.hh  parameters-default-values.hh
src/lib-controler/precompile/: precompile-aimed-point.cc  precompile-aimed-point.hh  precompile-axis.cc  precompile-axis.hh  precompile-grid.cc  precompile-grid.hh  precompile.cc  precompile.hh
src/lib-controler/view/: view-precompile-ortho.cc  view-precompile-ortho.hh  view-precompile-perspective.cc  view-precompile-perspective.hh  view-precompile.cc  view-precompile.hh  view.cc  view.hh
src/lib-corefinement/: CMakeLists.txt
src/lib-corefinement/2d-propagation/: boolean-operations-2d.cc  boolean-operations-2d.hh  corefine-2d-propagation.cc  corefine-2d-propagation.hh  corefine-2d-propagation.icc
src/lib-corefinement/2d-sweeping/: corefine-2d-sweeping.cc  corefine-2d-sweeping.hh  sweeping-comparators.cc  sweeping-comparators.hh
src/lib-corefinement/3d/: boolean-operations-3d.cc  boolean-operations-3d.hh  corefine-3d-face-face.cc  corefine-3d-face-face.hh  corefine-3d.cc  corefine-3d.hh  corefine-3d.icc  face-intersection-tools.cc  face-intersection-tools.hh
src/lib-corefinement/common/: boolean-operations.cc  boolean-operations.hh  corefine-2d-tools.cc  corefine-2d-tools.hh  corefine-3d-tools.cc  corefine-3d-tools.hh  corefine.cc  corefine.hh  edge-intersection.cc  edge-intersection.hh  edge-intersection.icc
src/lib-corefinement/interface/: corefinement-api.cc  corefinement-api.hh
src/lib-extraction-images/: CMakeLists.txt  extraction-images.cc  extraction-images.hh  extraction-images.icc  image-2d-extraction.icc  image-3d-cea.cc  image-3d-cea.hh  image-3d-cea.icc  image-3d-extraction-with-precodes.icc  image-3d-extraction.icc  image-3d-magick.cc  image-3d-magick.hh  image-3d-magick.icc  image-3d.cc  image-3d.hh  image-3d.icc  pixel-step.hh  precodes-f.icc  precodes-fc.icc  precodes-l.icc
src/lib-gmapkernel/: CMakeLists.txt  README  alt-stdint.hh  attributes-id.hh  chrono.hh  inline-macro.hh
src/lib-gmapkernel/g-map-generic/: dynamic-coverage-real-face.hh  g-map-generic.hh  gmg-border.cc  gmg-border.hh  gmg-contract-and-remove.cc  gmg-contract-and-remove.hh  gmg-contraction.cc  gmg-contraction.hh  gmg-degree.cc  gmg-degree.hh  gmg-deletion.cc  gmg-deletion.hh  gmg-direct-info.cc  gmg-direct-info.hh  (+45 more)
src/lib-mesh/: CMakeLists.txt  inter-smooth-diver.cc  inter-smooth-diver.hh  inter-smooth-diver.icc  mesh-generic.hh  mesh-interface.cc  mesh-interface.hh  mesh-vertex.hh  mg-cell-identification.cc  mg-cell-identification.hh  mg-instance.cc  mg-instance.hh  mg-merge.cc  mg-merge.hh  mg-mesh.cc  mg-mesh.hh  mg-selection.cc  mg-selection.hh  mv-array-allocation.cc  mv-array-allocation.hh  mv-control-points.cc  mv-control-points.hh  mv-instance.cc  mv-instance.hh  mv-mesh.cc  mv-mesh.hh
src/lib-spamod/: CMakeLists.txt  spamod-api.cc  spamod-api.hh
src/mokaQtIhm/: CMakeLists.txt  main.cc
src/tools/: CMakeLists.txt  convert-off-to-moka.cc  cubical-homology.cc  example-basic.cc  homology.cc  homology2d.cc  submap.cc
(+306 files in other folders)
