#-------------------------------------------------------------------------------
add_library (mesh  
  inter-smooth-diver.cc mg-cell-identification.cc mg-merge.cc
  mg-selection.cc mv-control-points.cc mv-mesh.cc mesh-interface.cc
  mg-instance.cc mg-mesh.cc mv-array-allocation.cc mv-instance.cc
)
#-------------------------------------------------------------------------------
